k8s/1-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: deploy-hello-kubernetes
spec:
  template:
    metadata:
      labels:
        app: pod-hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: eu.gcr.io/pxl-k8s/hello-kube:0.2
        resources:
          limits:
            cpu: "0.1"
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - name: http-api
          containerPort: 5000
