k8s/3-service.yaml
---
apiVersion: v1
kind: Service 
metadata:
  name: svc-hello-kubernetes
spec:
  selector:
    app: #
  ports:
    - port: 80
      targetPort: http-api
