k8s/4-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-hello-kubernetes
spec:
  backend:
    serviceName: svc-hello-kubernetes
    servicePort: 80
