k8s/full-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: deploy-hello-kubernetes
spec:
  template:
    metadata:
      labels:
        app: pod-hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: eu.gcr.io/k8s-fourcast/hello-kube/DEPLOY_ENV
        resources:
          limits:
            cpu: "0.1"
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - name: http-api
          containerPort: 5000
---
apiVersion: v1
kind: Service 
metadata:
  name: svc-hello-kubernetes
spec:
  type: NodePort
  selector:
    app: pod-hello-kubernetes
  ports:
    - port: 80
      targetPort: http-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-hello-kubernetes
#  annotations:
#    kubernetes.io/ingress.global-static-ip-name: website-static-ip
spec:
  backend:
    serviceName: svc-hello-kubernetes
    servicePort: 80
